# news_analyze

./: .env.example  .gitignore  EMBEDDING_README.md  README.md  alembic.ini  analyze_news_topics.py  api_server.py  chinatimes_scraper.py  docker-compose-db.yml  docker-compose.yml  generate_embeddings.py  langchain_scraper.py  news_result.json  pyproject.toml  run_all_scrapers.py  run_streamlit.py  setn_scraper.py  streamlit_app.py  tvbs_scraper.py
alembic/: env.py
alembic/versions/: 4287da6108de_change_embedding_dimensions_to_1024.py  8ea356642b6e_initial_migration.py  97c07ece827f_change_publish_date_to_date_type.py  d376777ac017_add_news_topic_statistics_table.py  ff6502bff2e5_remove_content_column.py
database/: README.md  USAGE.md  __init__.py  config.py  models.py  operations.py
firecrawl/: .env.example  docker-compose.yml
news_scraper/: README.md  __init__.py  scraper.py
scrapers/: README.md  __init__.py  chinatimes_scraper.py  example_other_site.py  setn_scraper.py  tvbs_scraper.py
scripts/: generate_embeddings.py  run_all_scrapers.py
utils/: __init__.py  jina_client.py  llm.py  logger.py
utils/scheduler/: scheduler.py  tasks.py
